[package]
name = "actix-prerender"
version = "0.2.3"
edition = "2021"
authors = ["Martin Mariano <contato@martinmariano.com>"]
description = "Actix middleware that sends requests to Prerender.io or a custom Prerender service URL."
repository = "https://github.com/saskenuba/actix-prerender"
license = "MIT"

[dependencies]
actix-service = "2"
actix-utils = "3"
actix-web = { version = "4", default-features = false }

futures-util = "0.3"
log = "0.4"
reqwest = { version = "0.11", features = ["tokio-rustls", "gzip"] }
thiserror = "1"
url = "2"

[dev-dependencies]
actix-web = { version = "4", default_features = false, features = ["macros"] }
env_logger = "0.9"
